--- a/assets/css/receita/receita-botao.css
+++ b/assets/css/receita/receita-botao.css
@@ -1,10 +1,10 @@
 .receita__botao {
     background: #8d0606;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     color: #fdfdfd;
     padding: 1rem;
-    transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out; /*** transição do botão começa e termina suave ***/
 }
 
 .receita__botao:hover {
