--- a/assets/css/pessoa/pessoa-imagem.css
+++ b/assets/css/pessoa/pessoa-imagem.css
@@ -1,20 +1,19 @@
 .pessoa__imagem {
-    background-size: cover;
-    height: 300px;
     background-position: center;
-    width: 300px;
     background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 100%;
+    height: 300px;
+    margin: 0 auto;
+    width: 300px;
 }
 
 .pessoa__imagem--roberta {
     background-image: url('../../img/pessoas/roberta.jpg');
-
 }
 
 .pessoa__imagem--marcela {
     background-image: url('../../img/pessoas/marcela.jpg');
-
 }
 
 .pessoa__imagem--andreia {
